--- a/foto_dia.html
+++ b/foto_dia.html
@@ -113,7 +113,7 @@
           <a href="https://getbootstrap.com/">
             <img src="https://fossies.org/linux/bootstrap/assets/img/bootstrap-stack.png" title="Bootstrap" width="30" height="30" class="d-inline-block align-top" alt="">
           </a>
-          <a href="https://github.com/jairnet/jquery-api">
+          <a href="https://github.com/jairnet/jquery-creatic">
             <i title="Github" class="fab fa-github-square fa-2x"></i>
           </a>
         </p>
